tests/ui/type-inference/unbounded-associated-type.stderr
error[E0282]: type annotations needed
  --> $DIR/unbounded-associated-type.rs:15:7
   |
LL |     S(std::marker::PhantomData).foo();
   |       ^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the struct `PhantomData`
   |
help: consider specifying a concrete type for the type parameter `T`
   |
LL |     S(std::marker::PhantomData::</* Type */>).foo();
   |                               ++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
